--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Art Stuido</title>
+    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
+
 </head>
 
 <body>
@@ -14,10 +17,10 @@
             <nav>
                 <div class="menu_burger__btn"><img src="images/icons/menu_burger__icon.png" alt=""></div>
                 <div class="socMedia_block">
-                    <div class="socMedia_item"><img src="images/icons/facebook_icon.png" alt=""></div>
-                    <div class="socMedia_item"><img src="images/icons/telegram_icon.png" alt=""></div>
-                    <div class="socMedia_item"><img src="images/icons/instagram_icon.png" alt=""></div>
-                    <div class="socMedia_item"><img src="images/icons/tiktok_icon.png" alt=""></div>
+                    <div class="socMedia_item wow fadeInDown" data-wow-offset="100"><img src="images/icons/facebook_icon.png" alt=""></div>
+                    <div class="socMedia_item wow fadeInDown" data-wow-offset="100"><img src="images/icons/telegram_icon.png" alt=""></div>
+                    <div class="socMedia_item wow fadeInDown" data-wow-offset="100"><img src="images/icons/instagram_icon.png" alt=""></div>
+                    <div class="socMedia_item wow fadeInDown" data-wow-offset="100"><img src="images/icons/tiktok_icon.png" alt=""></div>
                 </div>
                 <ul class="menu_burger">
                     <a href="#">
@@ -53,14 +56,14 @@
                 </ul>
             </nav>
         </header>
-        <div class="main_text">
+        <div class="main_text wow fadeInLeft" data-wow-offset="100">
             <h1>Artstudio Sofiya Vatulyak</h1>
             <h2>Дитяча Артстудія</h2>
         </div>
     </div>
     <div class="ourHistory_block">
         <div class="ourHistory_title">Наша історія</div>
-        <div class="ourHistory_textBlock">
+        <div class="ourHistory_textBlock wow fadeInLeft" data-wow-offset="100">
             <div class="ourHistory_leftSide__block">
                 <div class="ourHistory_leftSide__block___topText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. ter took a galley of type and scrambled it to make a type specimen book</div>
                 <div class="ourHistory_leftSide__block___bottomText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. . ter took a galley of type and scrambled it to make a type specimen book.</div>
@@ -73,7 +76,7 @@
         <div class="outDirections_title">Наші напрямки</div>
         <div class="outDirections_mainBlock">
             <div class="outDirections_mainBlock__leftSide">
-                <div class="outDirections_item">
+                <div class="outDirections_item wow fadeInLeft" data-wow-offset="100">
                     <div class="outDirections_item__moreInfoBlock">
                         <h3>Курси</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. nown printer took a galley of type and scrambled it to m</p>
@@ -88,7 +91,7 @@
                         <a href="#" class="outDirections_item__btnMore">Детальніше</a>
                     </div>
                 </div>
-                <div class="outDirections_item">
+                <div class="outDirections_item wow fadeInLeft" data-wow-offset="100">
                     <div class="outDirections_item__moreInfoBlock">
                         <h3>Розписи стін</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. nown printer took a galley of type and scrambled it to m</p>
@@ -106,7 +109,7 @@
             </div>
             <div class="outDirections_centreLine"></div>
             <div class="outDirections_mainBlock__rightSide">
-                <div class="outDirections_item">
+                <div class="outDirections_item wow fadeInRight" data-wow-offset="100">
                     <div class="outDirections_item__moreInfoBlock">
                         <h3>Арт-бутік</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. nown printer took a galley of type and scrambled it to m</p>
@@ -121,7 +124,7 @@
                         <a href="#" class="outDirections_item__btnMore">Детальніше</a>
                     </div>
                 </div>
-                <div class="outDirections_item">
+                <div class="outDirections_item wow fadeInRight" data-wow-offset="100">
                     <div class="outDirections_item__moreInfoBlock">
                         <h3>Картини</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. nown printer took a galley of type and scrambled it to m</p>
@@ -154,6 +157,7 @@
 
     <!--  JQuery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
