--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <a href="#">
                         <li>
                             <img src="images/icons/paintings_icon.png" alt="" class="menu_icon">
-                            <p>Картини</p>
+                            <p>Галерея картини</p>
                         </li>
                     </a>
                 </ul>
@@ -58,7 +58,7 @@
         </header>
         <div class="main_text wow fadeInLeft" data-wow-offset="100">
             <h1>Artstudio Sofiya Vatulyak</h1>
-            <h2>Дитяча Артстудія</h2>
+            <h2>Художня Арт-студія</h2>
         </div>
     </div>
     <div class="ourHistory_block">
