--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <a href="#">
                         <li>
                             <img src="images/icons/paintings_icon.png" alt="" class="menu_icon">
-                            <p>Галерея картини</p>
+                            <p>Галерея картин</p>
                         </li>
                     </a>
                 </ul>
