--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 </ul>
             </nav>
         </header>
+        <img src="images/headerImg2.png" alt="" class="portraitImg-header wow fadeInLeft">
         <div class="main_text wow fadeInLeft" data-wow-offset="100">
             <h1>Artstudio Sofiya Vatulyak</h1>
             <h2>Художня Арт-студія</h2>
@@ -70,14 +71,13 @@
             </div>
             <div class="ourHistory_rightSide__block">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer too</div>
         </div>
-        <div class="ourHistory_image"><img src="images/rainbow.png" alt=""></div>
     </div>
-    <div class="outDirections_block">
-        <div class="outDirections_title">Наші напрямки</div>
-        <div class="outDirections_mainBlock">
-            <div class="outDirections_mainBlock__leftSide">
-                <div class="outDirections_item wow fadeInLeft" data-wow-offset="100">
-                    <div class="outDirections_item__moreInfoBlock">
+    <div class="ourDirections_block">
+        <div class="ourDirections_title">Наші напрямки</div>
+        <div class="ourDirections_mainBlock">
+            <div class="ourDirections_mainBlock__leftSide">
+                <div class="ourDirections_item wow fadeInLeft" data-wow-offset="100">
+                    <div class="ourDirections_item__moreInfoBlock">
                         <h3>Курси</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. nown printer took a galley of type and scrambled it to m</p>
                         <div>
@@ -85,14 +85,14 @@
                             <h3>1200-4000</h3>
                         </div>
                     </div>
-                    <div class="outDirections_item__darkerBlock"></div>
-                    <div class="outDirections_item__bottomSection">
+                    <div class="ourDirections_item__darkerBlock"></div>
+                    <div class="ourDirections_item__bottomSection">
                         <p>Курси</p>
-                        <a href="#" class="outDirections_item__btnMore">Детальніше</a>
+                        <a href="#" class="ourDirections_item__btnMore">Детальніше</a>
                     </div>
                 </div>
-                <div class="outDirections_item wow fadeInLeft" data-wow-offset="100">
-                    <div class="outDirections_item__moreInfoBlock">
+                <div class="ourDirections_item wow fadeInLeft" data-wow-offset="100">
+                    <div class="ourDirections_item__moreInfoBlock">
                         <h3>Розписи стін</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. nown printer took a galley of type and scrambled it to m</p>
                         <div>
@@ -100,17 +100,16 @@
                             <h3>500-1200</h3>
                         </div>
                     </div>
-                    <div class="outDirections_item__darkerBlock"></div>
-                    <div class="outDirections_item__bottomSection">
+                    <div class="ourDirections_item__darkerBlock"></div>
+                    <div class="ourDirections_item__bottomSection">
                         <p>Розписи стін</p>
-                        <a href="#" class="outDirections_item__btnMore">Детальніше</a>
+                        <a href="#" class="ourDirections_item__btnMore">Детальніше</a>
                     </div>
                 </div>
             </div>
-            <div class="outDirections_centreLine"></div>
-            <div class="outDirections_mainBlock__rightSide">
-                <div class="outDirections_item wow fadeInRight" data-wow-offset="100">
-                    <div class="outDirections_item__moreInfoBlock">
+            <div class="ourDirections_mainBlock__rightSide">
+                <div class="ourDirections_item wow fadeInRight" data-wow-offset="100">
+                    <div class="ourDirections_item__moreInfoBlock">
                         <h3>Арт-бутік</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. nown printer took a galley of type and scrambled it to m</p>
                         <div>
@@ -118,25 +117,25 @@
                             <h3>1500-2500</h3>
                         </div>
                     </div>
-                    <div class="outDirections_item__darkerBlock"></div>
-                    <div class="outDirections_item__bottomSection">
+                    <div class="ourDirections_item__darkerBlock"></div>
+                    <div class="ourDirections_item__bottomSection">
                         <p>Арт-бутік</p>
-                        <a href="#" class="outDirections_item__btnMore">Детальніше</a>
+                        <a href="#" class="ourDirections_item__btnMore">Детальніше</a>
                     </div>
                 </div>
-                <div class="outDirections_item wow fadeInRight" data-wow-offset="100">
-                    <div class="outDirections_item__moreInfoBlock">
-                        <h3>Картини</h3>
+                <div class="ourDirections_item wow fadeInRight" data-wow-offset="100">
+                    <div class="ourDirections_item__moreInfoBlock">
+                        <h3>Галерея картини</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. nown printer took a galley of type and scrambled it to m</p>
                         <div>
                             <h3>Ціна</h3>
                             <h3>1150-6500</h3>
                         </div>
                     </div>
-                    <div class="outDirections_item__darkerBlock"></div>
-                    <div class="outDirections_item__bottomSection">
-                        <p>Картини</p>
-                        <a href="#" class="outDirections_item__btnMore">Детальніше</a>
+                    <div class="ourDirections_item__darkerBlock"></div>
+                    <div class="ourDirections_item__bottomSection">
+                        <p>Галерея картини</p>
+                        <a href="#" class="ourDirections_item__btnMore">Детальніше</a>
                     </div>
                 </div>
             </div>
